<resources>
    <string name="app_name" translatable="false">StoryApp</string>
    <string name="signup">Register</string>
    <string name="login">Login</string>
    <string name="message_welcome_page">Share your story here</string>
    <string name="title_welcome_page">Hello Peeps!</string>
    <string name="title_signup_page">Let\'s Join Us</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Enter your data</string>
    <string name="title_login_page">Welcome</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="email_warning">Wrong email format</string>
    <string name="password_warning">Password must have at least 6 characters</string>
    <string name="name_warning">Name can\'t be empty</string>
    <string name="register_success">Register success</string>
    <string name="register_fail">Register failed</string>
    <string name="login_success">Login success</string>
    <string name="login_fail">Login failed</string>
    <string name="fail_load_stories">Stories failed to load</string>
    <string name="success_load_stories">Stories success to load</string>
    <string name="permission_denied">Permission denied</string>
    <string name="upload_success">Upload success</string>
    <string name="upload_fail">Upload failed</string>
    <string name="fail_take_picture">Failed to take picture</string>
    <string name="fail_show_camera">Failed to show camera</string>
    <string name="failed_take">Failed to take picture</string>
    <string name="pic">picture</string>
    <string name="back_cam">isBackCamera</string>
    <string name="failed_cam">Failed to bring up camera</string>
    <string name="select_image">Select image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="language">Language</string>
    <string name="retry">Try Again</string>
    <string name="title_activity_maps">Story Map</string>
    <string name="menu_map">Map View</string>
    <string name="menu_list">Stories View</string>
    <string name="image">image</string>
</resources>